tests/positive/issue2248/Package.juvix
module Package;

import PackageDescription.V1 open;

package : Package := defaultPackage {name := "issue2248"};
