tests/negative/Package/PackageJuvixDoesntCompile/Package.juvix
module Package;

import Stdlib.Prelude open;
import PackageDescription open;

package : Package := 1;
